--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>primeiro site</title>
 </head>
 <body>
-    
+ <h1>Sobre a Barbearia Alura</h1>   
+
+ <p>Localizada mo coração da cidade,a <sotrong>Barbearia Alura</sotrong>traz parao mercado o que há de moelhor para seu cabelo e barba. Fundada em 2019 , a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia</p>
+ 
 </body>
 </html>
