--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <body>
  <h1>Sobre a Barbearia Alura</h1>   
 
- <p>Localizada mo coração da cidade,a <sotrong>Barbearia Alura</sotrong>traz parao mercado o que há de moelhor para seu cabelo e barba. Fundada em 2019 , a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia</p>
- 
+ <p>Localizada mo coração da cidade,a <sotrong>Barbearia Alura</sotrong>traz para o
+     mercado o que há de moelhor para seu cabelo e barba. Fundada em 2019 , a barbearia
+      Alura já é destaque na cidade e conquista novos clientes a cada dia</p>
+      <p><em>Nossa missão é:<strong>"proporcinar autoestima e qualidade de vida aos 
+        clientes"</strong></em></p>
+       <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
+        O atendimento possui padrão de exelência e agilidade, garantindo qualidade e
+        satisfação a nosos clientes.</p>
+        
+
 </body>
 </html>
